--- a/home.html
+++ b/home.html
@@ -41,9 +41,13 @@
     </div>
   </div>
 
-  <div class="container-fluid">
-    
-  </div>
+
+  <nav class=" navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Home</a>
+    </div>
+  </nav>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
