--- a/home.html
+++ b/home.html
@@ -44,28 +44,28 @@
   <!-- Navigation bar-->
   <nav class=" navbar navbar-expand-lg navbar-light bg-white justify-content-center">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item active ml-0">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#">Catalog</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#">Shop</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#">Pages</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#">Blog</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#">Docs</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Shopper.</a>
+      <li class="nav-item active ml-5">
+        <a class="nav-link" href="#"><span class="shopper-item">Shopper.</span></a>
       </li>
-      <li class="nav-item dropdown active">
+      <li class="nav-item dropdown active ml-5">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           United States
@@ -76,7 +76,7 @@
           <a class="dropdown-item" href="#">Germany</a>
         </div>
       </li>
-      <li class="nav-item dropdown active">
+      <li class="nav-item dropdown active ml-3">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           USD
@@ -86,7 +86,7 @@
           <a class="dropdown-item" href="#">EUR</a>
         </div>
       </li>
-      <li class="nav-item dropdown active">
+      <li class="nav-item dropdown active ml-3">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           EN
@@ -98,7 +98,7 @@
         </div>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active ml-3">
         <a class="nav-link" href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search"
             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -108,7 +108,7 @@
           </svg></a>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active ml-2">
         <a class="nav-link" href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person"
             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -116,7 +116,7 @@
           </svg></a>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active ml-2">
         <a class="nav-link" href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart"
             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -124,7 +124,7 @@
           </svg></a>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active ml-2">
         <a class="nav-link" href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart"
             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
