update to navbar-style
update to navbar-style

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
         <a class="nav-link" href="#">Docs</a>
       </li>
       <li class="nav-item active ml-5">
-        <a class="nav-link" href="#"><span class="shopper-item">Shopper.</span></a>
+        <a class="navbar-brand href="#">Shopper.</a>
       </li>
       <li class="nav-item dropdown active ml-5">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
